deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-sec-kill
spec:
  type: LoadBalancer
  selector:
    app: go-sec-kill
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
