deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-sec-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/go-sec-kill(/|$)(.*)"
            backend:
              service:
                name: go-sec-kill
                port:
                  number: 9999
